# color-sort-game

./: .gitignore  README.md  ampule.py  color.py  color_translation.py  config.py  config.yaml  game.py  game_board.py  generate_board.py  interface.py  main.py  pyproject.toml  requirements-dev.txt  save_load_gameboard.py  tools.py
color_sort_game/: config.py  generate_board.py  main.py  save_load_gameboard.py  tools.py
color_sort_game/game_logic/: ampule.py  color.py  game_board.py
color_sort_game/interface/: level_loop.py  main_menu.py  player_decision.py
data/: config.yaml
data/levels/: level_1.json  level_4.json
game_logic/: ampule.py
interface/: level_loop.py  main_menu.py  player_decision.py
levels/: level2.json  level3.json
tests/: test_ampule.py  test_game_board.py  test_tools.py
