[tool.poetry]
name = "color-sort-name"
version = "0.1.0"
description = ""
authors = ["Jan Kowalczewski <official.jan.kk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
